api-gateway/yaml/ingress-dapr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dapr
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress-dapr
            port:
              number: 80
